Ejercicios tema 3 y tema 4

--- a/views/T1/index.html
+++ b/views/T1/index.html
@@ -21,20 +21,20 @@
         <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
     </head>
     <body class="container">
-        <header class="header">
-            <h1 class="h1">Desarrollo de Aplicaciones Web</h1>
-        </header>
-        <nav class="menu">
-            <ul>
-                <a href="../../../index.html"><li>Inicio</li></a>
-                <a href="../../../proyectoDWES/indexProyectoDWES.html"><li>DWES</li></a>
-                <a href="../../index.html"><li class="active">DWEC</li></a>
-                <li>DAW</li>
-                <li>DIW</li>
-                <li>EIE</li>
-            </ul>
-        </nav>
-        <main class="main">
+		<header class="header">
+			<h1 class="h1">Desarrollo de Aplicaciones Web</h1>
+		</header>
+		<nav class="menu">
+                    <ul>
+                        <a href=""><li>Inicio</li></a>
+                        <a href=""><li>DWES</li></a>
+                        <a href="../../index.html"><li class="active">DWEC</li></a>
+                        <li>DAW</li>
+                        <li>DIW</li>
+                        <li>EIE</li>
+                    </ul>
+		</nav>
+		<main class="main">
             <section>
                 <h2>Desarrollo Web Entorno Cliente</h2>
 		<h3>Tema 1. Selección de Arquitecturas y Lenguajes de Programación</h3>
@@ -66,104 +66,108 @@
                         <td class="tdimg"></td>
                     </tr>
                         <tr class="subtr">
-                            <td class="subejercicio">HTML basic 01</td>
-                            <td class="tdimg"></td>
-                            <td class="tdimg"><a href="02/01/index.html"><img src="../../assets/images/html.png" alt="mostrar"></a></td>
+                                <td class="subejercicio">HTML basic 01</td>
+                                <td class="tdimg"></td>
+                                <td class="tdimg"><a href="02/01/index.html"><img src="../../assets/images/html.png" alt="mostrar"></a></td>
                         </tr>
                         <tr class="subtr">
-                            <td class="subejercicio">HTML basic 02</td>
-                            <td class="tdimg"></td>
-                            <td class="tdimg"><a href="02/02/index.html"><img src="../../assets/images/html.png" alt="mostrar"></a></td>
+                                <td class="subejercicio">HTML basic 02</td>
+                                <td class="tdimg"></td>
+                                <td class="tdimg"><a href="02/02/index.html"><img src="../../assets/images/html.png" alt="mostrar"></a></td>
                         </tr>
                         <tr class="subtr">
-                            <td class="subejercicio">HTML basic 03</td>
-                            <td class="tdimg"></td>
-                            <td class="tdimg"><a href="02/03/index.html"><img src="../../assets/images/html.png" alt="mostrar"></a></td>
+                                <td class="subejercicio">HTML basic 03</td>
+                                <td class="tdimg"></td>
+                                <td class="tdimg"><a href="02/03/index.html"><img src="../../assets/images/html.png" alt="mostrar"></a></td>
                         </tr>
                         <tr class="subtr">
-                            <td class="subejercicio">HTML basic 04</td>
-                            <td class="tdimg"></td>
-                            <td class="tdimg"><a href="02/04/index.html"><img src="../../assets/images/html.png" alt="mostrar"></a></td>
+                                <td class="subejercicio">HTML basic 04</td>
+                                <td class="tdimg"></td>
+                                <td class="tdimg"><a href="02/04/index.html"><img src="../../assets/images/html.png" alt="mostrar"></a></td>
                         </tr>
                         <tr class="subtr">
-                            <td class="subejercicio">HTML basic 05</td>
-                            <td class="tdimg"></td>
-                            <td class="tdimg"><a href="02/05/index.html"><img src="../../assets/images/html.png" alt="mostrar"></a></td>
+                                <td class="subejercicio">HTML basic 05</td>
+                                <td class="tdimg"></td>
+                                <td class="tdimg"><a href="02/05/index.html"><img src="../../assets/images/html.png" alt="mostrar"></a></td>
                         </tr>
                         <tr class="subtr">
-                            <td class="subejercicio">HTML basic 06</td>
-                            <td class="tdimg"></td>
-                            <td class="tdimg"><a href="02/06/index.html"><img src="../../assets/images/html.png" alt="mostrar"></a></td>
+                                <td class="subejercicio">HTML basic 06</td>
+                                <td class="tdimg"></td>
+                                <td class="tdimg"><a href="02/06/index.html"><img src="../../assets/images/html.png" alt="mostrar"></a></td>
                         </tr>
+                    
                     <tr class="tr">
                         <td class="ejercicio">Práctica B - Arreglar HTML</td>
                         <td class="tdimg"><a href="B/index inicial.html"><img src="../../assets/images/enunhtml.png" alt="enunciado"></a></td>
                         <td class="tdimg"><a href="B/index.html"><img src="../../assets/images/html.png" alt="mostrar"></a></td>
                     </tr>
+                    
                     <tr class="tr">
                         <td class="ejercicio">Práctica 03 - HTML up</td>
                         <td class="tdimg"><a href="../../assets/statement/T1/03. Práctica 03 - HTML up.pdf"><img src="../../assets/images/enun.png" alt="enunciado"></a></td>
                         <td class="tdimg"></td>
                     </tr>
                         <tr class="subtr">
-                            <td class="subejercicio">HTML up 01</td>
-                            <td class="tdimg"></td>
-                            <td class="tdimg"><a href="03/01/index.html"><img src="../../assets/images/html.png" alt="mostrar"></a></td>
+                                <td class="subejercicio">HTML up 01</td>
+                                <td class="tdimg"></td>
+                                <td class="tdimg"><a href="03/01/index.html"><img src="../../assets/images/html.png" alt="mostrar"></a></td>
                         </tr>
                         <tr class="subtr">
-                            <td class="subejercicio">HTML up 02</td>
-                            <td class="tdimg"></td>
-                            <td class="tdimg"><a href="03/02/index.html"><img src="../../assets/images/html.png" alt="mostrar"></a></td>
+                                <td class="subejercicio">HTML up 02</td>
+                                <td class="tdimg"></td>
+                                <td class="tdimg"><a href="03/02/index.html"><img src="../../assets/images/html.png" alt="mostrar"></a></td>
                         </tr>
                         <tr class="subtr">
-                            <td class="subejercicio">HTML up 03</td>
-                            <td class="tdimg"></td>
-                            <td class="tdimg"><a href="03/03/index.html"><img src="../../assets/images/html.png" alt="mostrar"></a></td>
+                                <td class="subejercicio">HTML up 03</td>
+                                <td class="tdimg"></td>
+                                <td class="tdimg"><a href="03/03/index.html"><img src="../../assets/images/html.png" alt="mostrar"></a></td>
                         </tr>
                         <tr class="subtr">
-                            <td class="subejercicio">HTML up 04</td>
-                            <td class="tdimg"></td>
-                            <td class="tdimg"><a href="03/04/index.html"><img src="../../assets/images/html.png" alt="mostrar"></a></td>
+                                <td class="subejercicio">HTML up 04</td>
+                                <td class="tdimg"></td>
+                                <td class="tdimg"><a href="03/04/index.html"><img src="../../assets/images/html.png" alt="mostrar"></a></td>
                         </tr>
                         <tr class="subtr">
-                            <td class="subejercicio">HTML up 05</td>
-                            <td class="tdimg"></td>
-                            <td class="tdimg"><a href="03/05/index.html"><img src="../../assets/images/html.png" alt="mostrar"></a></td>
+                                <td class="subejercicio">HTML up 05</td>
+                                <td class="tdimg"></td>
+                                <td class="tdimg"><a href="03/05/index.html"><img src="../../assets/images/html.png" alt="mostrar"></a></td>
                         </tr>
+                        
                     <tr class="tr">
                         <td class="ejercicio">Práctica 04 - JS Inicial</td>
                         <td class="tdimg"><a href="../../assets/statement/T1/04. Práctica 04 - JS INICIAL.pdf"><img src="../../assets/images/enun.png" alt="enunciado"></a></td>
                         <td class="tdimg"></td>
                     </tr>
                         <tr class="subtr">
-                            <td class="subejercicio">JS Inicial - A</td>
-                            <td class="tdimg"></td>
-                            <td class="tdimg"><a href="04/A/index.html"><img src="../../assets/images/html.png" alt="mostrar"></a></td>
+                                <td class="subejercicio">JS Inicial - A</td>
+                                <td class="tdimg"></td>
+                                <td class="tdimg"><a href="04/A/index.html"><img src="../../assets/images/html.png" alt="mostrar"></a></td>
                         </tr>
                         <tr class="subtr">
-                            <td class="subejercicio">JS Inicial - B</td>
-                            <td class="tdimg"></td>
-                            <td class="tdimg"><a href="04/B/index.html"><img src="../../assets/images/html.png" alt="mostrar"></a></td>
+                                <td class="subejercicio">JS Inicial - B</td>
+                                <td class="tdimg"></td>
+                                <td class="tdimg"><a href="04/B/index.html"><img src="../../assets/images/html.png" alt="mostrar"></a></td>
                         </tr>
+                        
                     <tr class="tr">
                         <td class="ejercicio">Práctica 05 - Diseño Web vs Desarrollo Web</td>
                         <td class="tdimg"><a href="../../assets/statement/T1/05. Práctica 05 - Diseño web vs Desarrollo web.pdf"><img src="../../assets/images/enun.png" alt="enunciado"></a></td>
                         <td class="tdimg"></td>
                     </tr>
                         <tr class="subtr">
-                            <td class="subejercicio">Estructura</td>
-                            <td class="tdimg"></td>
-                            <td class="tdimg"><a href="../../assets/docs/T1/05/estructura.pdf"><img src="../../assets/images/pdf.png" alt="mostrar"></a></td>
+                                <td class="subejercicio">Estructura</td>
+                                <td class="tdimg"></td>
+                                <td class="tdimg"><a href="../../assets/docs/T1/05/estructura.pdf"><img src="../../assets/images/pdf.png" alt="mostrar"></a></td>
                         </tr>
                         <tr class="subtr">
-                            <td class="subejercicio">Documentación</td>
-                            <td class="tdimg"></td>
-                            <td class="tdimg"><a href="../../assets/docs/T1/05/Practica 05 - Documentacion Diseño Web vs Desarrollo web.pdf"><img src="../../assets/images/pdf.png" alt="mostrar"></a></td>
+                                <td class="subejercicio">Documentación</td>
+                                <td class="tdimg"></td>
+                                <td class="tdimg"><a href="../../assets/docs/T1/05/Practica 05 - Documentacion Diseño Web vs Desarrollo web.pdf"><img src="../../assets/images/pdf.png" alt="mostrar"></a></td>
                         </tr>
                         <tr class="subtr">
-                            <td class="subejercicio">Index</td>
-                            <td class="tdimg"></td>
-                            <td class="tdimg"><a href="05/index.html"><img src="../../assets/images/html.png" alt="mostrar"></a></td>
+                                <td class="subejercicio">Index</td>
+                                <td class="tdimg"></td>
+                                <td class="tdimg"><a href="05/index.html"><img src="../../assets/images/html.png" alt="mostrar"></a></td>
                         </tr>
                     
                 </table>
@@ -173,7 +177,8 @@
             <nav class="fnav">
                 <ul>
                     <li class="ftexto">&copy 2020-21. Sonia Anton LLanes</li>
-                    <li>
+                    <li><a href="../../assets/docs/curriculum_SALL.pdf" target="_blank"><img src="../../assets/images/CV.png" alt="imagen_CV"></a>
+                        <img src="../../assets/images/linkedin.png" alt="imagen_linkedin">
                         <a href="https://github.com/SoniaALLSauces/proyectoDWEC" target="_blank"><img src="../../assets/images/github.png" alt="imagen_github"></a>
                     </li>
                 </ul>
