--- a/views/T2/index.html
+++ b/views/T2/index.html
@@ -21,23 +21,23 @@
         <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
     </head>
     <body class="container">
-        <header class="header">
-            <h1 class="h1">Desarrollo de Aplicaciones Web</h1>
-        </header>
-        <nav class="menu">
-            <ul>
-                <a href="../../../index.html"><li>Inicio</li></a>
-                <a href="../../../proyectoDWES/indexProyectoDWES.html"><li>DWES</li></a>
-                <a href="../../index.html"><li class="active">DWEC</li></a>
-                <li>DAW</li>
-                <li>DIW</li>
-                <li>EIE</li>
-            </ul>
-        </nav>
-        <main class="main">
+		<header class="header">
+			<h1 class="h1">Desarrollo de Aplicaciones Web</h1>
+		</header>
+		<nav class="menu">
+			<ul>
+				<a href=""><li>Inicio</li></a>
+				<a href=""><li>DWES</li></a>
+				<a href="../../index.html"><li class="active">DWEC</li></a>
+				<li>DAW</li>
+				<li>DIW</li>
+				<li>EIE</li>
+			</ul>
+		</nav>
+		<main class="main">
             <section>
                 <h2>Desarrollo Web Entorno Cliente</h2>
-                <h3>Tema 2. Introducción al Lenguaje JavaScript</h3>
+		<h3>Tema 2. Introducción al Lenguaje JavaScript</h3>
                             
                 <table>
                     <tr>
@@ -53,19 +53,19 @@
                     <tr class="tr">
                         <td class="ejercicio">Práctica 01 - Operadores Lógicos</td>
                         <td class="tdimg"><a href="../../assets/statement/T2/01. Práctica 01 - Operadores lógicos.pdf"><img src="../../assets/images/enun.png" alt="enunciado"></a></td>
-                        <td class="tdimg"><a href="../../assets/docs/T2/01/01. Práctica 01 - Operadores lógicos.pdf"><img src="../../assets/images/pdf.png" alt="mostrar"></a></td>
+                        <td class="tdimg"><a href="../../assets/docs/T2/01/01. Práctica 01 – Operadores lógicos.pdf"><img src="../../assets/images/pdf.png" alt="mostrar"></a></td>
                     </tr>
                     <tr class="tr">
                         <td class="ejercicio">Práctica 02 - Operadores</td>
                         <td class="tdimg"><a href="../../assets/statement/T2/02. Práctica 02 Operadores.pdf"><img src="../../assets/images/enun.png" alt="enunciado"></a></td>
                         <td class="tdimg"><a href="02/index.html"><img src="../../assets/images/html.png" alt="mostrar"></a></td>
                     </tr>
-					<tr class="tr">
+                    <tr class="tr">
                         <td class="ejercicio">Práctica A - Operadores - Conversiones</td>
                         <td class="tdimg"><a href="../../assets/statement/T2/PRÁCTICA A - Operadores-Conversiones.pdf"><img src="../../assets/images/enun.png" alt="enunciado"></a></td>
                         <td class="tdimg"><a href="A/index.html"><img src="../../assets/images/html.png" alt="mostrar"></a></td>
                     </tr>	
-					<tr class="tr">
+                    <tr class="tr">
                         <td class="ejercicio">Práctica B - Tipos, Operadores y Variables</td>
                         <td class="tdimg"><a href="../../assets/statement/T2/PRÁCTICA B - Tipos, Operadores y variables.pdf"><img src="../../assets/images/enun.png" alt="enunciado"></a></td>
                         <td class="tdimg"><a href="B/index.html"><img src="../../assets/images/html.png" alt="mostrar"></a></td>
@@ -80,7 +80,7 @@
                         <td class="tdimg"><a href="../../assets/statement/T2/03. Practica 03 - Sentencias condicionales IF.pdf"><img src="../../assets/images/enun.png" alt="enunciado"></a></td>
                         <td class="tdimg"><a href="03/index.html"><img src="../../assets/images/html.png" alt="mostrar"></a></td>
                     </tr>
-					<tr class="tr">
+                    <tr class="tr">
                         <td class="ejercicio">Práctica D - Más Sentencias Condicionales IF</td>
                         <td class="tdimg"><a href="../../assets/statement/T2/PRÁCTICA D - Sentencias condicionales IF.pdf"><img src="../../assets/images/enun.png" alt="enunciado"></a></td>
                         <td class="tdimg"><a href="D/index.html"><img src="../../assets/images/html.png" alt="mostrar"></a></td>
@@ -95,7 +95,7 @@
                         <td class="tdimg"><a href="../../assets/statement/T2/05. Práctica 05 - Sentencias condicionales WHILE.pdf"><img src="../../assets/images/enun.png" alt="enunciado"></a></td>
                         <td class="tdimg"><a href="05/index.html"><img src="../../assets/images/html.png" alt="mostrar"></a></td>
                     </tr>
-					<tr class="tr">
+                    <tr class="tr">
                         <td class="ejercicio">Práctica 06 - Sentencias Condicionales FOR</td>
                         <td class="tdimg"><a href="../../assets/statement/T2/06. Práctica 06 - Setencias condicionales FOR.pdf"><img src="../../assets/images/enun.png" alt="enunciado"></a></td>
                         <td class="tdimg"><a href="06/index.html"><img src="../../assets/images/html.png" alt="mostrar"></a></td>
@@ -118,7 +118,8 @@
             <nav class="fnav">
                 <ul>
                     <li class="ftexto">&copy 2020-21. Sonia Anton LLanes</li>
-                    <li>
+                    <li><a href="../../assets/docs/curriculum_SALL.pdf" target="_blank"><img src="../../assets/images/CV.png" alt="imagen_CV"></a>
+                        <img src="../../assets/images/linkedin.png" alt="imagen_linkedin">
                         <a href="https://github.com/SoniaALLSauces/proyectoDWEC" target="_blank"><img src="../../assets/images/github.png" alt="imagen_github"></a>
                     </li>
                 </ul>
